Add read handler
