# internal/transport/dto/request.go
@@ -17,7 +17,26 @@ type UpdatePersonRequest struct {
 	Nationality string `json:"nationality,omitempty" example:"RU"`
 }
 
-func ToPersonModel(p *UpdatePersonRequest) *model.Person {
+type PeopleFilters struct {
+	Name        string `form:"name,omitempty" example:"John"`
+	Surname     string `form:"surname,omitempty" example:"Snow"`
+	Patronymic  string `form:"patronymic,omitempty" example:"Dmitrich"`
+	Age         int    `form:"age,omitempty" binding:"numeric" validate:"omitempty,min=1,max=100" example:"30"`
+	Gender      string `form:"gender,omitempty" validate:"omitempty,oneof=male female" example:"male"`
+	Nationality string `form:"nationality,omitempty" example:"RU"`
+}
+
+type Pagination struct {
+	Page int `form:"page" binding:"numeric" validate:"omitempty,min=1" example:"1"`
+	Size int `form:"size" binding:"numeric" validate:"omitempty,min=1" example:"10"`
+}
+
+type SortOptions struct {
+	By    string `form:"sort_by" validate:"omitempty,oneof=name surname age" example:"name"`
+	Order string `form:"order,omitempty" validate:"omitempty,oneof=asc desc" example:"desc"`
+}
+
+func UpdateReqToPersonModel(p *UpdatePersonRequest) *model.Person {
 	return &model.Person{
 		Name:        p.Name,
 		Surname:     p.Surname,
@@ -25,5 +44,38 @@ func ToPersonModel(p *UpdatePersonRequest) *model.Person {
 		Age:         p.Age,
 		Gender:      p.Gender,
 		Nationality: p.Nationality,
+	}
+}
+
+func CreateReqToPersonModel(p *CreatePersonRequest) *model.Person {
+	return &model.Person{
+		Name:       p.Name,
+		Surname:    p.Surname,
+		Patronymic: p.Patronymic,
+	}
+}
+
+func ToPeopleFiltersModel(p *PeopleFilters) *model.PeopleFilters {
+	return &model.PeopleFilters{
+		Name:        p.Name,
+		Surname:     p.Surname,
+		Patronymic:  p.Patronymic,
+		Age:         p.Age,
+		Gender:      p.Gender,
+		Nationality: p.Nationality,
+	}
+}
+
+func ToPaginationModel(p *Pagination) *model.Pagination {
+	return &model.Pagination{
+		Page: p.Page,
+		Size: p.Size,
+	}
+}
+
+func ToSortOptionsModel(p *SortOptions) *model.SortOptions {
+	return &model.SortOptions{
+		By:    p.By,
+		Order: p.Order,
 	}
 }
